re #6138: rename gruender to adminstrator, bugfix galery actions and wrapping list-view actions
git-svn-id: svn://develop.studip.de/studip/trunk@37007 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/studygroup.less
+++ b/public/assets/stylesheets/less/studygroup.less
@@ -17,3 +17,8 @@ ul.studygroup-gallery {
         }
     }
 }
+
+.studygroupmemberlist tr > .actions {
+    text-align: right;
+    white-space: nowrap;
+}
