--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5693,6 +5693,10 @@ ul.studygroup-gallery li {
 ul.studygroup-gallery li section {
   margin: 0 auto;
 }
+.studygroupmemberlist tr > .actions {
+  text-align: right;
+  white-space: nowrap;
+}
 div.wikitoc {
   font-size: 1em;
   margin-bottom: 5px;
